[package]
name = "api_lambda"
version = "0.1.0"
authors = ["Mike Goddard <mikeygiom@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "^0.2"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
aws_lambda_events = "^0.2.7"
dynomite = "0.10"
env_logger = "0.6"
futures = "0.3"
rand = "0.7.3"
rusoto_apigatewaymanagementapi = "0.38"
rusoto_core = "0.38"
openssl = { version = "0.10", features = ["vendored"] }
common = { path = "../common" }
tokio = { version = "0.3.5", features = ["full"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
