[package]
name = "common"
version = "0.1.0"
authors = ["Mike Goddard <mikeygiom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
aws_lambda_events = "^0.2.7"
dynomite = "0.4"
env_logger = "0.6"
futures = "0.1"
rusoto_apigatewaymanagementapi = "0.38"
rusoto_core = "0.38"
tokio = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
