[package]
name = "connect_lambda_function"
version = "0.1.0"
authors = ["Mike Goddard <mikeygiom@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "^0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
aws_lambda_events = "^0.2.7"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
